[gd_scene load_steps=3 format=3 uid="uid://d1mtu4rwjfyyw"]

[ext_resource type="Script" path="res://scenes/in_game_ui.gd" id="1_6gq0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnb8u"]
content_margin_left = 10.0
content_margin_top = 10.0
bg_color = Color(0.0878785, 0.0679442, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="in-game-ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gq0h")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pnb8u")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="heightLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Height : 134m "

[node name="platformCrossedLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Platforms crossed : 7"

[node name="chancesLeftLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Chances left : 3"
